# datathon_recommender_system

./: .gitignore  Makefile  README.md  app.py  generate_embeddings.ipynb  pyproject.toml  requirements.txt
data/: base_info.parquet  dataset_info.txt
helpers/: smart_input_formatter.py
pages/: chosen_product.py
src/: constants.py  data.py  model.py  smart_input_formatter.py  vector_database.py
tests/: prompts_test.csv
