[project]
name = "semantic search engine"
version = "0.1.0"
description = ""
authors = [ {name = "My Name", email = "myemail@example.com"}, ]
requires-python = ">= 3.9"

dependencies = [
    annoy = '1.17.3'
    google.generativeai = '0.5.4'
    python-dotenv = '1.0.1'
    sentence-transformers = '3.0.0'
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"